--- a/sites/all/themes/openscholar/aberdeen/css/aberdeen.layout.css
+++ b/sites/all/themes/openscholar/aberdeen/css/aberdeen.layout.css
@@ -1,6 +1,11 @@
 
 /* bigscreen three_col_grail */
 
+#page {
+  width: 980px;
+margin: 0 auto 0 auto;
+}
+
 #header-left, #sidebar-first {
     width: 200px;
 }
